syntax = "proto3";

package Booking;



option go_package = "./pkg/booking/pb";

service BookingManagement {
    rpc SearchTrain(SearchTrainRequest) returns (SearchTrainResponse) {} 
    rpc Booking(BookingRequest)returns(BookingReponse){}
}

//Booking
message BookingRequest{
    string trainid = 1;
}
message BookingReponse{
    string trainname = 1;
    string traintype = 2;
    string startingtime = 3;
    string endingtime = 4;
    repeated compartment compartment = 5;
}
message compartment{
    string compartmentname = 1;
    string price = 2;
    string availabilitystatus = 3;
}

//Search train 
message SearchTrainRequest{
    string date =1;
    string sourcestationid=2;
    string destinationstationid=3;
}

message SearchTrainResponse {
    int64 status = 1;
    string error = 2;
    repeated TrainData traindata = 3;
}

message TrainData{
    string trainname = 1;
    int64 trainNumber =2;
    string startingTime =3;
    string endingtime = 4;
    float  distance = 5;
    string trainid = 6;
}
