syntax = "proto3";

package Train;

option go_package = "./pkg/train/pb";

service TrainManagement{
    rpc AddTrain(AddTrainRequest) returns (AddTrainResponse) {}
}

message AddTrainRequest{
    int64 trainid = 1;
    int64 trainnumber =2;
    string trainname = 3;
}

message AddTrainResponse{
    int64 status = 1;
    string error = 2;
}